fixed small spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ away from the edge so they can round properly*/
 
 .spacing{
     margin:10px;
+    margin-top:0px;
 }
 
 h2{
@@ -52,7 +53,7 @@ h2{
 nav{
     display: flex;
     flex-flow: column;
-    height: 130px;
+    height: 145px;
     justify-content: space-between;
 }
 
